@@ -1,3 +1,12 @@
+2009-05-04  Christian Hoff  <christian_hoff@gmx.net>
+
+	* generator/ClassField.cs: Derive from StructField.
+	* generator/ObjectBase.cs: Implement validation mechanism for
+	class structures. If the structure contains bitfields or fields
+	of unknown types, we cannot generate it in managed code.
+	* generator/GObjectVM.cs: Fall back to glue if the class structure
+	cannot be generated.	[Fixes #498051]
+
 2009-05-03  Mike Kestner  <mkestner@novell.com>
 
 	* glib/Object.cs: revert to old LookupType behavior when Handle is
